# bts-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  build.sh
.github/workflows/: rust.yml
examples/: agg_trailing_stop.rs  data.rs  draw.rs  envelop_strategy.rs  macd_ema.rs  par_parameters_optimization.rs  parameter_optimization.rs  take_profit_and_stop_loss.rs  trailing_stop.rs  utils.rs
src/: draws.rs  errors.rs  lib.rs  main.rs  metrics.rs  optimizer.rs  plot.rs  utils.rs
src/engine/: bt.rs  bts.rs  candle.rs  mod.rs  order.rs  position.rs  wallet.rs
