[package]
name = "bts-rs"
version = "0.7.0"
edition = "2024"
description = "Backtest your trading strategy."
authors = ["tetuaoro <65575727+tetuaoro@users.noreply.github.com>"]
documentation = "https://docs.rs/bts-rs"
repository = "https://github.com/raonagos/bts-rs"
license = "MIT"
readme = "README.md"
keywords = [
    "trading",
    "finance",
    "backtest",
    "indicators",
    "technical-analysis",
]
categories = ["finance", "science", "algorithms"]

[lib]
name = "bts"

[dependencies]
rand = "0.9.2"
thiserror = "2.0.17"
chrono = { version = "0.4.42" }

rayon = { version = "1.11.0", optional = true }
num_cpus = { version = "1.17.0", optional = true }
serde = { version = "1.0.226", features = ["derive"], optional = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
rayon = { version = "1.11.0", features = ["web_spin_lock"] }

# also update the doc feature below
[features]
metrics = []
optimizer = ["dep:rayon", "dep:num_cpus"]
serde = ["chrono/serde", "dep:serde"]

[dev-dependencies]
ta = "0.5.0"
anyhow = "1.0.100"

[package.metadata.docs.rs]
features = ["serde", "metrics", "optimizer"]

[[example]]
name = "ts"
path = "examples/trailing_stop.rs"

[[example]]
name = "tpsl"
path = "examples/take_profit_and_stop_loss.rs"

[[example]]
name = "popt"
path = "examples/parameter_optimization.rs"

[[example]]
name = "par_popt"
path = "examples/par_parameters_optimization.rs"
required-features = ["optimizer"]

[[example]]
name = "aggts"
path = "examples/agg_trailing_stop.rs"
