[package]
name = "bts-rs"
version = "0.8.0"
edition = "2024"
description = "Backtest your trading strategy."
authors = ["tetuaoro <65575727+tetuaoro@users.noreply.github.com>"]
documentation = "https://docs.rs/bts-rs"
repository = "https://github.com/raonagos/bts-rs"
license = "MIT"
readme = "README.md"
keywords = [
    "trading",
    "finance",
    "backtest",
    "indicators",
    "technical-analysis",
]
categories = ["finance", "science", "algorithms"]

[dependencies]
rand = "0.9.2"
chrono = "0.4.42"
thiserror = "2.0.17"

rayon = { version = "1.11.0", optional = true }
plotters = { version = "0.3.7", optional = true }
num_cpus = { version = "1.17.0", optional = true }
serde_json = { version = "1.0.145", optional = true }
serde = { version = "1.0.226", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = "0.3.4"

# also update the doc feature below
[features]
default = ["draws"]
metrics = []
serde = ["chrono/serde", "dep:serde"]
optimizer = ["dep:rayon", "dep:num_cpus"]
draws = ["dep:plotters", "dep:serde_json"]
wasm = ["rayon/web_spin_lock", "getrandom/wasm_js"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
ta = "0.5.0"

[[example]]
name = "ts"
path = "examples/trailing_stop.rs"

[[example]]
name = "tpsl"
path = "examples/take_profit_and_stop_loss.rs"

[[example]]
name = "popt"
path = "examples/parameter_optimization.rs"

[[example]]
name = "par_popt"
path = "examples/par_parameters_optimization.rs"
required-features = ["optimizer"]

[[example]]
name = "aggts"
path = "examples/agg_trailing_stop.rs"
